[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hong tran <hong@elsanow.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.27"
openai = "^1.13.3"
langchain = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
